--- a/frontend/src/styles/SearchBar.module.css
+++ b/frontend/src/styles/SearchBar.module.css
@@ -10,6 +10,7 @@
     border-radius: 4px;
     margin-right: 8px;
     margin-bottom: 15px;
+    margin-top: 15px;
   }
   
   .search-button {
@@ -19,6 +20,7 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-top: 15px;
     margin-bottom: 15px;
   }
   
